all postman test completed 3,0